<resources>
    <string name="app_name">فروشگاه کلار</string>
    <string name="SHOP_HOST_NAME">kelarstore.ir</string>
    <string name="SHOP_HOST_NAME_WWW">www.kelarstore.ir</string>
    <string name="URL_ADDRESS_PRODUCT_DIR">product</string>
    <string name="CENTRAL_SMS">YOUR-CENTRAL-SMS</string>
    <string name="CENTRAL_PHONE">02156418372</string>
    <string name="EMAIL_ADDRESS">info@kelarpooya.com</string>
    <string name="TELEGRAM_BOT">https://telegram.me/kelarrobot</string>
    <string name="GOOGLE_MAP_LATITUDE">35.444550</string>
    <string name="GOOGLE_MAP_LONGITUDE">51.010694</string>
    <string name="GOOGLE_MAP_LABEL">شیرآلات کلارپویا</string>
    <string name="GOOGLE_MAP_ZOOM_LEVEL">17.0f</string>
    <string name="HOME_SLIDER_RATIO">2.918</string>
    <string name="APARAT_USER_NAME">kelarpooya</string>
    <string name="APARAT_PER_PAGE">10</string>
    <string name="HOME_SLIDER_DURATION">5000</string>
    <string name="PRODUCT_SLIDER_DURATION">5000</string>
    <string name="DOWNLOAD_APK_DIR">/KelarShop</string>
    <string name="URL_SHOP">http://kelarstore.ir</string>
    <string name="URL_HIGH_TEAM">http://highteam.ir</string>
    <string name="URL_APARAT">http://www.aparat.com</string>
    <string name="URL_API_APARAT_VIDEO_BY_USER">http://www.aparat.com/etc/api/videoByUser/username</string>
    <string name="URL_API_check_for_update">http://highteam.ir/androidapi/check_for_update.php</string>
    <string name="URL_API_shopRootAddress">http://kelarstore.ir/API2/example</string>
    <string name="URL_API_slider">http://kelarstore.ir/API2/example/slider</string>
    <string name="URL_API_category">http://kelarstore.ir/API2/example/category</string>
    <string name="URL_API_productInfo">http://kelarstore.ir/API2/example/productinfo</string>
    <string name="URL_API_getMore">http://kelarstore.ir/API2/example/getmore</string>
    <string name="URL_API_search">http://kelarstore.ir/API2/example/search</string>
    <string name="URL_API_categoryProduct">http://kelarstore.ir/API2/example/categoryproduct</string>
    <string name="URL_API_productFromId">http://kelarstore.ir/API2/example/productfromid</string>
    <string name="URL_API_amazingOffers">http://kelarstore.ir/API2/example/amazingoffers</string>
    <string name="URL_API_recentlyAdded">http://kelarstore.ir/API2/example/recentlyadded</string>
    <string name="URL_API_mostPopular">http://kelarstore.ir/API2/example/mostpopular</string>
    <string name="URL_API_topViewed">http://kelarstore.ir/API2/example/topviewed</string>
    <string name="URL_API_topPurchased">http://kelarstore.ir/API2/example/toppurchased</string>
    <string name="URL_API_relatedProducts">http://kelarstore.ir/API2/example/relatedproducts</string>
    <string name="URL_API_productIdFromLink">http://kelarstore.ir/API2/example/productidfromlink</string>
    <string name="URL_API_Head">http://kelarstore.ir/API2/example/head</string>
    <string name="URL_API_Agency">http://kelarstore.ir/API2/example/agency</string>
    <string name="URL_API_Project">http://kelarstore.ir/API2/example/project</string>
    <string name="URL_API_Login">http://kelarstore.ir/API2/example/login</string>
    <string name="URL_API_register">http://kelarstore.ir/API2/example/register</string>
    <string name="URL_API_SubmitOrder">http://kelarstore.ir/API2/example/submitorder</string>
    <string name="URL_API_Shipping_Billing">http://kelarstore.ir/API2/example/getshippingbilling</string>
    <string name="URL_API_GetOrder">http://kelarstore.ir/API2/example/getorder</string>
    <string name="URL_API_GetOrderProduct">http://kelarstore.ir/API2/example/getorderproduct</string>
    <string name="CURRENCY_IRAN_RIAL"> ریال </string>
    <string name="NO_RATE_YET">امتیازی ثبت نشده</string>
    <string name="COUNT_INVALID">تعداد کالا معتبر نیست</string>
    <string name="COUNT_UPDATED">تعداد کالا به روز شد</string>
    <string name="ERROR_OCCUR_TRY_AGAIN">خطایی رخ داد ، دوباره امتحان کنید</string>
    <string name="ARE_YOU_SURE_DELETE_ITEM">آیا مطمئن هستید که میخواهید این آیتم را حذف کنید ؟</string>
    <string name="YES">بله</string>
    <string name="NO">خیر</string>
    <string name="PRODUCT_DELETED">محصول مورد نظر از لیست حذف شد</string>
    <string name="WARNING">هشدار</string>
    <string name="ALREADY_EXIST_IN_LIST">از قبل در لیست وجود دارد</string>
    <string name="PRODUCT_ADDED_TO_FAVORITE">محصول مورد نظر به لیست علاقه مندی افزوده شد</string>
    <string name="PRODUCT_ADDED_TO_PURCHASE_BASKET">محصول مورد نظر با موفقیت به سبد خرید اضافه شد</string>
    <string name="URGENT_FRAME_TEXT">این نسخه از برنامه دیگر قابل استفاده نیست\n
لطفا به روزرسانی نمایید</string>
    <string name="ERROR_OCCUR">خطایی رخ داد</string>
    <string name="FILL_ALL_FIELDS">لطفا تمامی فیلدها را وارد نمایید</string>
    <string name="SET_ORDER_SUCCESSFUL">سفارش شما با موفقیت ثبت شد</string>
    <string name="PLEASE_WAIT">لطفا صبر کنید</string>
    <string name="SENDING_INFO">در حال ارسال اطلاعات</string>
    <string name="ADD_PRODUCT_FIRST">ابتدا محصولی به سبد خرید اضافه نمایید</string>
    <string name="EMAIL_SUBJECT">پیام به کلار پویا</string>
    <string name="TELEGRAM_NOT_FOUND">تلگرام در دستگاه شما نصب نشده !\nاکنون نصب میکنید ؟</string>
    <string name="DOWNLOAD_SUCCESSFUL">دانلود با موفقیت به پایان رسید</string>
    <string name="NO_ENOUGH_STORAGE">حافظه ی کافی برای دانلود آپدیت موجود نیست</string>
    <string name="FONT_IRAN_SANS">IRAN Sans.ttf</string>
    <string name="FONT_YEKAN">yekan.ttf</string>
    <string name="PERFECT">خیلی عالیه</string>
    <string name="MOHAMMAD_HOSSEIN">محمد حسین عابدینی</string>
    <string name="COMMENT_TEXT">"سلام دوستان. من این لپ تاپ رو 2 روزه خریدم در مورد مشکل درایور ها بگم شما میتونین نرم افزار DriverEasy Professional 5.0.4.12293 + Portable رو دانلود کنین و سیستم رو آنالیز کنین. یه سری درایور رو میگه آپدیت کنین که یکیش 300 مگابایت هست یکیش 200 مگابایت و یکی هم 500 مگابایته بقیشون در حد کیلوبایت و 15 مگ هست. اینارو آپدیت کنی لولو میشه هولو کیف کنین ! \n" +
                    "این لپ تاپ فوق العادست ! البته من نداشتم قسطی خریدمش خخخخ"</string>
    <string name="PRODUCT_UNAVAILABLE">محصول موجود نیست</string>
    <string name="MY_POPULAR_PRODUCTS">محصولات محبوب من</string>
    <string name="CALL_WITH_SUPPORT">تماس با پشتیبانی</string>
    <string name="SURF_WEBSITE">بازدید از سایت</string>
    <string name="SEND_EMAIL">ارسال ایمیل</string>
    <string name="OUR_TELEGRAM_BOT">ربات تلگرام ما</string>
    <string name="LAUNCH_TEACH">کلار تی وی</string>
    <string name="PURCHASE_BASKET">سبد خرید</string>
    <string name="ADDRESS_ON_MAP">آدرس روی نقشه</string>
    <string name="PROJECTS">پروژه ها</string>
    <string name="AGENCIES">نمایندگی ها</string>
    <string name="CONTACT_US">تماس با ما</string>
    <string name="ABOUT_US">درباره ی ما</string>
    <string name="SEND_SMS_SUPPORT">ارسال پیامک به پشتیبانی</string>
    <string name="FINALIZE_ORDER">نهایی کردن سفارش</string>
    <string name="MOBILE">موبایل</string>
    <string name="YOUR_COMMENT">نظر شما</string>
    <string name="MOHAMMAD">محمد</string>
    <string name="SUBMIT">ثبت</string>
    <string name="SUN_GLASS">عینک آفتابی</string>
    <string name="TOP_SOLD">پرفروش های هفته</string>
    <string name="MORE">بیشتر</string>
    <string name="NOTHING_TO_SHOW">در این قسمت چیزی وجود ندارد</string>
    <string name="EMPTY_LIST">لیست شما خالی است</string>
    <string name="USER_NAME">User Name</string>
    <string name="PASSWORD">Password</string>
    <string name="FORGET_PASSWORD">Forgot Password?</string>
    <string name="SIGN_IN">Sign in</string>
    <string name="DO_NOT_HAVE_ACCOUNT">Do not have account? Register</string>
    <string name="SPECIFIC_DETAIL">مشخصات فنی</string>
    <string name="NO_MATCH_FOUND">موردی یافت نشد</string>
    <string name="EMPTY_PURCHASE_BASKET">سبد خرید شما خالی است</string>
    <string name="NAME">نام</string>
    <string name="LAST_NAME">نام خانوادگی</string>
    <string name="ADDRESS">آدرس</string>
    <string name="PHONE_NUM">شماره تماس</string>
    <string name="SUBMIT_ORDER">ثبت سفارش</string>
    <string name="PRODUCT_NOT_FOUND">محصول مورد نظر یافت نشد</string>
    <string name="NO_INTERNET">خطایی در اتصال به اینترنت رخ داد</string>
    <string name="RETRY">تلاش مجدد</string>
    <string name="COLOR">رنگ :</string>
    <string name="COUNT">تعداد :</string>
    <string name="NO_EXIST">موجود نیست</string>
    <string name="PRODUCT_COUNT">تعداد کالا</string>
    <string name="COUNT_WITHOUT_COLON">تعداد</string>
    <string name="UNIT_PRICE">قیمت واحد</string>
    <string name="TOTAL_PRICE">قیمت کل</string>
    <string name="ADD_TO_BASKET">افزودن به سبد خرید</string>
    <string name="YOUR_FIRST_PRODUCT">محصول اول شما</string>
    <string name="NEW_VERSION_CHANGES">تغییرات نسخه ی جدید</string>
    <string name="CLOSE">بستن</string>
    <string name="UPDATE_AVAILABLE_DO_YOU_WANT">نسخه ی جدید موجود است ، اکنون نصب میکنید ؟</string>
    <string name="UPDATE">به روز رسانی</string>
    <string name="SEARCH">جستجو</string>
    <string name="NEVER_SHOW_AGAIN">دیگر نشان نده</string>
    <string name="GUIDE">راهنمایی</string>
    <string name="READ_EXTERNAL_STORAGE_GUIDE_PERSIAN">برای ذخیره ی آپدیت نیاز به دسترسی به حافظه میباشد\n
گزینه ی زیر را انتخاب کرده\n
از داخل مجوز ها دسترسی حافظه را فعال کنید</string>
    <string name="READ_EXTERNAL_STORAGE_GUIDE_ENGLISH">برای ذخیره ی آپدیت نیاز به دسترسی به حافظه میباشد\n
گزینه ی زیر را انتخاب کرده\n
از داخل permissions\n
گزینه ی Storage را فعال کنید</string>
    <string name="SETTINGS">تنظیمات</string>
    <string name="ENABLE_DOWNLOAD_MANAGER_GUIDE">برای دانلود فایل نیاز است که برنامه Download Manager فعال باشد\n
گزینه ی تنظیمات را از منوی زیر انتخاب کرده</string>
    <string name="CLICK_ON_ENABLE_DOWNLOAD_MANAGER_PERSIAN">دکمه ی فعال کردن را بزنید</string>
    <string name="CLICK_ON_ENABLE_DOWNLOAD_MANAGER_ENGLISH">دکمه ی Enable را بزنید</string>
    <string name="ORDER_RESULT">نتیجه سفارش</string>
    <string name="ORDER_SUCCESSFUL_ODER_NUM_EQUAL">"سفارش شما با موفقیت ثبت شد \n کد سفارش : "</string>
    <string name="DELETE_UNAVAILABLE_PRODUCTS">حذف محصولات ناموجود</string>
    <string name="SOME_PRODUCTS_UNAVAILABLE_DELETE">فقط محصولات موجود را میتوانید سفارش دهید\n
برخی از محصولات موجود نیستند ، اکنون حذف میکنید ؟</string>
    <string name="EMPTY_REGISTERED_ORDERS">لیست سفارشات شما خالی است</string>
    <string name="ORDERS">سفارشات</string>
    <string name="ORDER_NUMBER">شناسه ی سفارش</string>
    <string name="TIME">زمان</string>
    <string name="DATE">تاریخ</string>
    <string name="TOTAL_COUNT">تعداد کل</string>
    <string name="ADAD">عدد</string>
    <string name="EMPTY_PRODUCT_LIST">لیست محصولات خالی است</string>
    <string name="YOUR_PRODUCT_NOT_EXIST">محصول مورد نظر موجود نیست</string>
    <string name="NO_EMAIL_APPLICATION_FOUND">برنامه ای برای ارسال ایمیل یافت نشد!\nاکنون نصب میکنید ؟</string>
    <string name="NO_SMS_APPLICATION_FOUND">برنامه ای برای ارسال پیامک یافت نشد</string>
    <string name="NO_CALL_APPLICATION_FOUND">برنامه ای برای برقراری تماس یافت نشد</string>
    <string name="NO_SHARE_APPLICATION_FOUND">برنامه ای برای به اشتراک گذاری یافت نشد</string>
    <string name="INSTALL_APPLICATION">نصب برنامه</string>
    <string name="AMAZING_OFFERS_PERSIAN">پیشنهادات شگفت انگیز</string>
    <string name="LOG_OUT">خروج از حساب</string>
    <string name="USER_NAME_PER">نام کاربری</string>
    <string name="PASSWORD_PER">رمز عبور</string>
    <string name="FORGET_PASSWORD_QUESTION_MARK">رمز عبور را فراموش کرده اید ؟</string>
    <string name="DONT_YOU_HAVE_ACCOUNT_CREATE_NOW">حساب کاربری ندارید ؟ اکنون ایجاد کنید</string>
    <string name="ENTER">ورود</string>
    <string name="EMAIL_TEXT">آدرس ایمیل</string>
    <string name="MOBILE_NUMBER">شماره تلفن همراه</string>
    <string name="PASSWORD_TEXT">کلمه ی عبور</string>
    <string name="RE_ENTER_PASSWORD">تکرار کلمه ی عبور</string>
    <string name="CREATE_ACCOUNT">ایجاد حساب کاربری</string>
</resources>