<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#e9e9e9"
    tools:context=".activity.ActivitySubmitComment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/primary"
        android:textSize="26sp"
        android:text="ثبت نظر"
        android:textColor="@color/white"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="0"
        android:layout_margin="15dp"
        android:isIndicator="false"
        android:layout_gravity="center_horizontal"
        android:stepSize="1"
        style="@style/foodRatingBar"
        android:numStars="5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="#afabab" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edtComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:hint="@string/YOUR_COMMENT"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="7dp">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_profile_gray"/>

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MOHAMMAD"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:layout_toLeftOf="@+id/imgProfile"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SUBMIT"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
