<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="60dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ActivitySetOrder"
    tools:showIn="@layout/activity_set_order"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textColorHint="@color/primary_darker"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="@dimen/activity_login_edt_username_margin_top">

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_user"
                android:drawableTint="@color/monsoon"
                android:backgroundTint="@color/primary_darker"
                android:gravity="right"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:maxLines="1"
                android:hint="@string/NAME"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textColorHint="@color/primary_darker"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_group"
                android:drawableTint="@color/monsoon"
                android:textSize="20sp"
                android:gravity="right"
                android:backgroundTint="@color/primary_darker"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:hint="@string/LAST_NAME"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textColorHint="@color/primary_darker"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_address"
                android:drawableTint="@color/monsoon"
                android:backgroundTint="@color/primary_darker"
                android:textSize="20sp"
                android:gravity="right"
                android:drawablePadding="10dp"
                android:hint="@string/ADDRESS"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColorHint="@color/primary_darker"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_phone"
                android:drawableTint="@color/monsoon"
                android:backgroundTint="@color/primary_darker"
                android:gravity="right"
                android:drawablePadding="10dp"
                android:textSize="20sp"
                android:maxLines="1"
                android:hint="@string/PHONE_NUM"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>